--- a/backEnd/project-name/package.json
+++ b/backEnd/project-name/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongoose": "^8.0.2",
+    "mongoose-timestamp": "^0.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
