--- a/frontEnd/frontend-reactjs-typescript/package.json
+++ b/frontEnd/frontend-reactjs-typescript/package.json
@@ -6,6 +6,9 @@
     "@dnd-kit/core": "^6.1.0-next-2023106221355",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0-next-2023106221355",
+    "@nivo/bar": "^0.84.0",
+    "@nivo/core": "^0.84.0",
+    "@nivo/line": "^0.84.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +22,7 @@
     "draft-js": "^0.11.7",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^4.25.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -27,6 +31,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.10.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -57,6 +62,7 @@
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
     "@types/react-beautiful-dnd": "^13.1.7",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-draft-wysiwyg": "^1.13.7",
     "tailwindcss": "^3.3.6"
   }
