--- a/frontEnd/frontend-reactjs-typescript/package.json
+++ b/frontEnd/frontend-reactjs-typescript/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "antd": "^5.12.1",
+    "date-fns": "^3.6.0",
     "dompurify": "^3.0.11",
     "draft-js": "^0.11.7",
     "react": "^18.2.0",
