--- a/backEnd/project-name/package.json
+++ b/backEnd/project-name/package.json
@@ -25,11 +25,15 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.2.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "google-auth-library": "^9.11.0",
     "mongoose": "^8.0.2",
     "mongoose-timestamp": "^0.6.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
