--- a/frontEnd/frontend-reactjs-typescript/package.json
+++ b/frontEnd/frontend-reactjs-typescript/package.json
@@ -9,6 +9,7 @@
     "@nivo/bar": "^0.84.0",
     "@nivo/core": "^0.84.0",
     "@nivo/line": "^0.84.0",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -28,6 +29,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-icons": "^5.2.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
@@ -65,6 +67,11 @@
     "@types/react-beautiful-dnd": "^13.1.7",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-draft-wysiwyg": "^1.13.7",
-    "tailwindcss": "^3.3.6"
+    "customize-cra": "^1.0.0",
+    "postcss-loader": "^8.1.1",
+    "react-app-rewired": "^2.2.1",
+    "tailwindcss": "^3.3.6",
+    "ts-loader": "^9.5.1",
+    "webpack-cli": "^5.1.4"
   }
 }
